#---------------------------------- 0.32.0 -----------------------------------
[added] the ability for callers to call stubs instead of needing to have all of
    your task / caller code in the same repository. See:
    `rpqueue.call_task(name, None or override_queue, *args, **kw)` and
    `rpqueue.known_tasks[name].execute(*args, **kwargs)`
#---------------------------------- 0.31.2 -----------------------------------
[fixed] the in some cases, rpqueue could return 'done' for a task status when it
    was actually 'started'. Thanks to github user https://github.com/posix4e for
    the bug report. Also noticed that there is an 'unknown' case where we can be
    in one of 2 states, but we'll go ahead and call that 'done' as well.
#---------------------------------- 0.31.1 -----------------------------------
[fixed] periodic tasks should now work. Sorry about that :/
#---------------------------------- 0.31.0 -----------------------------------
[fixed] issues with cron tasks and periodic tasks, releasing 0.31.0 because
    0.30.* is apparently cursed
#---------------------------------- 0.30.6 -----------------------------------
[fixed] issue with redis-py <2.* connections
#---------------------------------- 0.30.5 -----------------------------------
[fixed] strange AttributeError on the threading.local object
#---------------------------------- 0.30.4 -----------------------------------
[fixed] bugs related to executing inline tasks
#---------------------------------- 0.30.3 -----------------------------------
[fixed] one line change because Josiah wasn't paying attention
#---------------------------------- 0.30.2 -----------------------------------
[fixed] removed izip, fixed some utility functions, added no arguments test to
    test / verify basic issue. Thanks to github user https://github.com/makov44
    for the original bug report and PR.
[changed] can now set the default queue name for the whole rpqueue as an