@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Description &#8212; RPQueue 0.32.0 documentation</title>
+    <title>Description &#8212; RPQueue 0.32.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -61,7 +61,7 @@
 <li><a class="reference internal" href="#module-rpqueue" title="rpqueue"><code class="xref any py py-mod docutils literal notranslate"><span class="pre">rpqueue</span></code></a></li>
 </ul>
 <p>Documentation for version:</p>
-<p>0.32.0</p>
+<p>0.32.1</p>
 <div class="section" id="description">
 <h1>Description<a class="headerlink" href="#description" title="Permalink to this headline">¶</a></h1>
 <p>This package intends to offer a priority-based remote task queue solution
@@ -426,7 +426,7 @@ DEADLETTER_QUEUE, you should:</p>
 
 <dl class="method">
 <dt id="rpqueue.Data.put_data">
-<code class="descname">put_data</code><span class="sig-paren">(</span><em>data</em>, <em>use_dead=None</em>, <em>is_one=False</em>, <em>chunksize=512</em><span class="sig-paren">)</span><a class="headerlink" href="#rpqueue.Data.put_data" title="Permalink to this definition">¶</a></dt>
+<code class="descname">put_data</code><span class="sig-paren">(</span><em>data</em>, <em>use_dead=None</em>, <em>is_one=False</em>, <em>chunksize=512</em>, <em>delay=0</em><span class="sig-paren">)</span><a class="headerlink" href="#rpqueue.Data.put_data" title="Permalink to this definition">¶</a></dt>
 <dd><p>Puts data items into the queue. Data is assumed to be a list of data
 items, each of which will be assigned a new UUID as an identifier before
 being placed into queues / mappings as necessary.</p>
@@ -436,9 +436,11 @@ being placed into queues / mappings as necessary.</p>
 <li><code class="docutils literal notranslate"><span class="pre">use_dead</span></code> - if provided and true-ish, will spew attempts exceeded
 data items into data DEADLETTER_QUEUE (queue has a default, can be
 overridden here to enable on this inserted data)</li>
-<li><code class="docutils literal notranslate"><span class="pre">is_one</span></code> - if you provide a list to <code class="docutils literal notranslate"><span class="pre">data</span></code>, but just want that to be
-one item, you can ensure that with <code class="docutils literal notranslate"><span class="pre">is_one=True</span></code></li>
+<li><code class="docutils literal notranslate"><span class="pre">is_one</span></code> - if you provide a list to <code class="docutils literal notranslate"><span class="pre">data</span></code>, but just want that to
+be one item, you can ensure that with <code class="docutils literal notranslate"><span class="pre">is_one=True</span></code></li>
 <li><code class="docutils literal notranslate"><span class="pre">chunksize</span></code> - the number of items to insert per pipeline flush</li>
+<li><code class="docutils literal notranslate"><span class="pre">delay</span></code> - if &gt;0, will delay the inserted items from reading for the
+provided number of seconds, requires <code class="docutils literal notranslate"><span class="pre">vis_timeout</span></code> &gt; 0</li>
 </ul>
 </div></blockquote>
 </dd></dl>
